1.09 / 30.11.2013
Beseitigung des Ueberlaufproblems bei der Ladezeitmessung in ReadCapacity mit Sleep Mode.
Die Art der Zaehler-Ueberlaufbehandlung in ReadCapacity mit Sleep Mode geaendert.
Programmierfehler bei der Kalibration der Nullkapazitaet beseitigt.
Vorbereitungen fuer Untersuchungen mit alternativen Messwiderstaenden 330/100k.
Zwei LED werden auch dann erkannt, wenn Schwellspannung >2V und keine gemeinsame Anode oder Kathode.
Mit der Makefile Option NO_TEST_T1_T7 werden die Selbsttests T1 bis T7 weggelassen für eine schnellere Kalibration.
Die Makefile Optionen NO_COMMON_EMITTER_HFE und NO_COMMON_COLLECTOR_HFE ergänzt, um gezielt
eine der beiden Meßmethoden wegzulassen. Beim ATmega168 wird dann der Selbsttest T1 bis T7 benutzt.
Für den ATmega168 werden beide hFE Messungen verwendet, dafür entfallen die Selbsttests T1 bis T7 .
Ergänzung der litauischen Sprache LANG_LITHUANIAN.
Der Selbsttest muss jetzt mit Tastendruck quittiert werden, sonst normale Messung.
Anpassung der Diodenerkennung, Begrenzug der Spannungsdifferenz.
Display-Anzeigezeit in der Dokumentation auf 28 Sekunden berichtigt.
1.08 / 1.10.2013
Bei BAT_POOR Pegel unter 3.25V ist der Warnpegel nur 0.2V höher. (Die Grenze war vorher bei <=2.9V).
Die Ueberpruefung der Ausgangs-Widerstandswerte in Calibrate_UR.c wurde entfernt.
Unterstuetzung von DOG-M LCDs mit ST7036 controller mit Makefile Option LCD_DOGM .
Neue Unterverzeichnisse mega328 und mega328_strip_grid für ATmega328 Daten.
Ergänzung der russischen und ukrainischen Sprache.
Wegen Speichermangel wird die Stromverstärkung nur beim mega328 in Kollektor und Emitterschaltung gemessen.
Bei der Bestimmung des Stromverstärkungsfaktor in Emitterschaltung wird der Kollektor-Reststrom berücksichtigt.
Bei Einzeldioden wird auch der Reststrom in Sperrichtung gemessen, der Text Diode entfällt.
Grenze für die Erkennung von Verarmungs FET von 92 auf 455 erhöht wegen Restströmen bei Germanium Transistoren.